objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displays the staff member&apos;s supervisor.  This value must be updated manually.</inlineHelpText>
        <label>Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Supervisor</relationshipLabel>
        <relationshipName>Supervisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teaching_Credential_Type__c</fullName>
        <inlineHelpText>Displays the staff member&apos;s teaching credentials by type. These values can be customized for the field on the contact object.</inlineHelpText>
        <label>Teaching Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular/Standard</fullName>
                </value>
                <value>
                    <fullName>Probationary/Initial</fullName>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Nonrenewable</fullName>
                </value>
                <value>
                    <fullName>Retired - An individual who no longer actively holds a position in the workforce because of advancing age or length of service.</fullName>
                </value>
                <value>
                    <fullName>Substitute</fullName>
                </value>
                <value>
                    <fullName>Teacher assistant</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Skills_Assessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication that the individual was assessed against the standards-based performance profiles of technology user skills as defined by the state.</description>
        <inlineHelpText>Select if the staff contact&apos;s technology skills have been assessed.</inlineHelpText>
        <label>Technology Skills Assessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology_Standards_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indication that the individual has achieved acceptable performance on a standards-based profile of technology user skills as defined by the state.</description>
        <inlineHelpText>Select if the staff contact&apos;s technology skills meet your standards.</inlineHelpText>
        <label>Technology Standards Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_1_Status__c</fullName>
        <inlineHelpText>Displays the student&apos;s Title 1 status. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Title 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Reduced</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transportation_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if authorization has been given for transportation purposes for the student</description>
        <inlineHelpText>Select if authorization has been given for transportation. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Transportation Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Contact__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the contact&apos;s 15-digit Salesforce ID from the User record. Note that only staff Contact records have a User record.</inlineHelpText>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>User Name *Retired</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displays the lookup to the User record.  Staff must have a User record in this field to interact with SchoolForce.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if authorization has been given to take the student&apos;s video</description>
        <inlineHelpText>Select if authorization has been given for the student to appear in videos. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Video Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <inlineHelpText>Displays the student&apos;s ward. This field must be set manually. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Ward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wireless_Provider__c</fullName>
        <inlineHelpText>Displays the parent contact&apos;s mobile carrier.  This field must be populated if the parent contact has elected to receive notifications via SMS.</inlineHelpText>
        <label>Mobile Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATT</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>T-Mobile</fullName>
                </value>
                <value>
                    <fullName>Cricket</fullName>
                </value>
                <value>
                    <fullName>Virgin Mobile</fullName>
                </value>
                <value>
                    <fullName>Boost</fullName>
                </value>
                <value>
                    <fullName>Simple Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X504_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student is enrolled in a 504 plan. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>504 Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Prior_Teaching_Experience__c</fullName>
        <inlineHelpText>Displays the number of years prior experience for a staff contact.</inlineHelpText>
        <label>Years of Prior Teaching Experience</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>legacy_key1__c</fullName>
        <label>legacy key1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Staff</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Staff</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Staff</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Parent_Guardians</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Parent_Guardian</value>
        </filters>
        <label>Parents/Guardians</label>
    </listViews>
    <listViews>
        <fullName>Staff</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>User__c</columns>
        <columns>Holding_Source__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Staff</value>
        </filters>
        <label>All Staff</label>
    </listViews>
    <listViews>
        <fullName>Students</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>Student_Current_Grade__c</columns>
        <columns>District_of_Columbia_C_Student_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Student</value>
        </filters>
        <label>All Students</label>
    </listViews>
    <recordTypes>
        <fullName>Parent_Guardian</fullName>
        <active>false</active>
        <description>This record type is for parents/guardians of students.</description>
        <label>Parent/Guardian</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <description>This record type is for staff members.</description>
        <label>Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>This record type is for students</description>
        <label>Student</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contact_Preferred_Email</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL( Preferred_Email__c ,&quot;&quot;),
OR(
LEN(AlternateEmail__c  )&gt;0,
LEN(WorkEmail__c )&gt;0,
LEN(HomeEmail__c  )&gt;0
)
)</errorConditionFormula>
        <errorMessage>Please select a Preferred Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Preferred_Phone</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(PreferredPhone__c ,&quot;&quot;),
OR(
 LEN(MobilePhone)&gt;0,
 LEN( WorkPhone__c)&gt;0,
 LEN( OtherPhone )&gt;0
)
)</errorConditionFormula>
        <errorMessage>Please select a Preferred Phone</errorMessage>
    </validationRules>
</CustomObject>